@@ -700,6 +700,21 @@ class DomainInversionTestCase(unittest.TestCase):
         domain = [['a.b.id', '=', 1, 'model']]
         self.assertEqual(unique_value(domain), (False, None, None))
 
+        domain = [['a', 'in', [1]]]
+        self.assertEqual(unique_value(domain), (True, 'a', 1))
+
+        domain = [['a', 'in', [1, 2]]]
+        self.assertEqual(unique_value(domain), (False, None, None))
+
+        domain = [['a', 'in', []]]
+        self.assertEqual(unique_value(domain), (False, None, None))
+
+        domain = [['a.b', 'in', [1]]]
+        self.assertEqual(unique_value(domain), (False, None, None))
+
+        domain = [['a.id', 'in', [1], 'model']]
+        self.assertEqual(unique_value(domain), (True, 'a.id', ['model', 1]))
+
     def test_evaldomain(self):
         domain = [['x', '>', 5]]
         self.assertTrue(eval_domain(domain, {'x': 6}))
